$Id: History,v 1.58 2002-11-18 14:55:20 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

15 November 2002, Hajime Yoshida (interfaces-V04-01-00)
- basic/src/G4UIArrayStrings.cc is now working for "konsole" type termcap.
	by Koichi Murakami

09 November 2002, Hajime Yoshida (interfaces-V04-00-05)
- G4UIGainServer.cc uses socklen_t as before. It must work for Solaris CC and HP.
- test/G4cout_test01 updated. An example of setCoutDestination(UI) by a user.

06 November 2002, Guy Barrand
- G4Xt.cc, G4UIXm.cc, G4UIXaw.cc : fix some warings.

14 June 2002, Hajime Yoshida (interfaces-V04-00-04)
- G4UIGainServer.cc/hh have a protection: #ifndef WIN32 ~ #endif not to compile
	on WIndows.

14 June 2002, Hajime Yoshida (interfaces-V04-00-04)
- Added protection #ifndef WIN32 to new class G4UIGainServer in definition
  and body, to prevent compilation on Windows platforms.

12 June 2002, Gabriele Cosmo (interfaces-V04-00-03)
- Fixes for porting on platforms other than Linux.
  o socklen_t is Linux specific and not defined elsewhere; changed to int*.
  o Fixed usage g4std/iostream, globals.hh and endl/G4endl.

12 June 2002, Hajime Yoshida (interfaces-V04-00-02)