@@ -1,4 +1,4 @@
-$Id: History,v 1.58 2002-11-18 14:55:20 johna Exp $
+$Id: History,v 1.59 2002-12-04 22:04:32 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+04 December 2002, Makoto Asai (interfaces-V04-01-01)
+- Migration to new G4ApplicationState.
 
 15 November 2002, Hajime Yoshida (interfaces-V04-01-00)
 - basic/src/G4UIArrayStrings.cc is now working for "konsole" type termcap.
